t/code/error/regressions/69.bel.out
File "./t/code/error/regressions/69.bel", line 15, column 5:
15 |  | [⊢ false] ⇒ ?
        ^^^^^^^^^^^^^
Error: The pattern
         [ |- false]
       is impossible for this case-expression's scrutinee, namely
         [ |- true]
